--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install opencv-python checker pysimplegui
+
+    - name: Build
+      run: nuitka --standalone --onefile --mingw main.py
+      
     - name: Upload
       uses: actions/upload-artifact@v3
       with:
