--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,8 @@ jobs:
         python-version: "3.11"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install pip-review
+        pip-review --auto
         pip install opencv-python checker pysimplegui
 
     - name: Build
