--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install pip-review
         pip-review --auto
-        pip install opencv-python pysimplegui
+        pip install opencv-python pysimplegui nuitka
 
     - name: Build
       run: nuitka --standalone --onefile --mingw main.py
