--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,8 +14,11 @@ permissions:
 
 jobs:
   build:
+    runs-on: ${{ matrix.os }}
 
-    runs-on: windows-latest
+    strategy:
+      matrix:
+        os: [windows-latest, macos-latest]
 
     steps:
     - name: Checkout
