--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,6 +44,6 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v3
       with:
-        name: main
+        name: ${{ matrix.os }}
         path: |
           main.*
